--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mantine/nprogress": "^8.3.10",
     "@mantine/spotlight": "^8.3.10",
     "@mantine/tiptap": "^8.3.10",
+    "@mantinex/mantine-logo": "^2.0.0",
+    "@tabler/icons-react": "^3.36.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
