--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@tiptap/pm": "^3.13.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.19",
     "embla-carousel": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "jsonwebtoken": "^9.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
+    "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
